--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "browser-sync": "2.26.14",
     "del": "6.0.0",
     "gulp": "^4.0.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "7.1.0",
-    "gulp-sass": "4.0.1",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
     "gulp-rename": "2.0.0",
+    "gulp-sass": "4.0.1",
     "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "7.0.1",
     "gulp-terser": "2.0.1",
